<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_landing"
    android:background="@drawable/AdminOptionBG">


    <ImageView
        android:id="@+id/RightStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bStore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="#FFFF00" />

    <ImageView
        android:id="@+id/LeftStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        app:layout_constraintEnd_toStartOf="@+id/bStore"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="#FFFF00" />

    <TextView
        android:id="@+id/tWelcomeAdmin"
        android:layout_width="223dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:text="@string/welcome_admin"
        android:textColor="#12ECD9"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAdminOptions"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/admin_options_top_right_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bMakeNewList"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/round_button"
        android:text="@string/make_new_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomLineOne" />

    <Button
        android:id="@+id/bViewExistingLists"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:text="@string/view_existing_lists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bMakeNewList" />

    <Button
        android:id="@+id/bStore"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:text="@string/store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bViewExistingLists" />

    <Button
        android:id="@+id/bTutorial"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:text="@string/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bStore" />

    <Button
        android:id="@+id/bStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:background="@drawable/round_button"
        android:text="@string/stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bNotifications"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/round_button"
        android:text="@string/notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/round_button"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bStats" />

    <Button
        android:id="@+id/TopLineOne"
        android:layout_width="246dp"
        android:layout_height="4dp"
        android:background="@drawable/btn_line_button"
        android:text=""
        android:textColorLink="#D82727"
        app:layout_constraintBottom_toTopOf="@+id/tWelcomeAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BottomLineOne"
        android:layout_width="246dp"
        android:layout_height="4dp"
        android:background="@drawable/btn_line_button"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tWelcomeAdmin" />

</androidx.constraintlayout.widget.ConstraintLayout>