<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/AdminOptionBG"
    tools:context=".AdminOptions">

    <TextView
        android:id="@+id/AdminOptionTitle"
        android:layout_width="241dp"
        android:layout_height="43dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/admin_options"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0DDDCC"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bResetLists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bResetLists"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/reset_lists"
        android:textColor="#FAF500"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bToggleDebugLog"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_button"
        android:text="@string/toggle_debug_log"
        android:textColor="#FAF500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bResetLists" />

    <Button
        android:id="@+id/bRemoveUser"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:background="@drawable/round_button"
        android:text="@string/remove_user"
        android:textColor="#FAF500"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/bGiveYourselfScore"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:background="@drawable/round_button"
        android:text="@string/give_yourself_score"
        android:textColor="#FAF500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="472dp" />

    <ImageView
        android:id="@+id/LeftStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/AdminOptionTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="#00BCD4"/>

    <ImageView
        android:id="@+id/RightStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/AdminOptionTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="#00BCD4" />
</androidx.constraintlayout.widget.ConstraintLayout>